multienvapp/base/front-javascript/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-javascript
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-javascript
  template:
    metadata:
      labels:
        app: front-javascript
    spec:
      containers:
      - image: quay.io/acidonpe/jump-app-front-javascript:latest
        imagePullPolicy: Always
        name: front-javascript
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
