multienvapp/base/front-javascript/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-javascript
spec:
  to:
    kind: Service
    name: front-javascript
  port:
    targetPort: http-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
